--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
   <!-- Nice -->
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
 
-	<script src="js/libs/require/require.js"></script>
-	<script src="js/main.js"></script>
+	<script data-main="js/main.js" src="js/libs/require/require.js"></script>
   <!--[if lt IE 9]>
     HTML5 Shim
     <script src="dist/html5shiv.js"></script>
